[package]
name = "biomemap-tileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["fs"] }
cubiomes = { version = "0.3.3" }
image = "0.25"
actix-web = "4.0"
actix-files = "0.6"
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
serde = "1.0"
thiserror = "2.0"
